# vimeo-monitor

./: .editorconfig  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CI_CD_UPDATE_SUMMARY.md  Makefile  README.md  mkdocs.yml  pyproject.toml  streammonitor.py  streammonitor_OLD.py  test_ffprobe.py  test_ffprobe_simple.py  uv.toml
.cursor/rules/isolation_rules/visual-maps/: van-mode-map.mdc
.cursor/rules/isolation_rules/visual-maps/van_mode_split/: van-mode-map.mdc
.cursor/rules/isolation_rules/visual-maps/van_mode_split/van-qa-checks/: dependency-check.mdc
.github/: README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/pull_request_template/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  pr-validation.yml  release.yml  security.yml  test-automation.yml  test-docs-build.yml
config/: README.md  config.toml.example  config.yaml  config.yaml.example
custom_modes/: README.md
docs/: IMPLEMENTATION_SUMMARY.md  api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  development.md  health-monitoring.md  index.md  installation.md  license.md  log-rotation.md  network-overlay.md  network_fallback_strategies.md  projectbrief.md  quick-start.md  raspberry-pi-deployment.md  service_installation.md  troubleshooting.md  usage.md
docs/about/: contributing.md
docs/archive/: ARCHIVE_INDEX.md  COMPLETED_PHASES_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  MEMORY_BANK_CONSOLIDATION.md  PHASE9_DOCUMENTATION_CONSOLIDATION_COMPLETE.md
docs/archive/phase1-foundation-20250115/: ARCHIVE_MANIFEST.txt
docs/archive/phase5-documentation-cicd-20250915/: Makefile  mkdocs.yml
docs/archive/phase5-documentation-cicd-20250915/.github/ISSUE_TEMPLATE/: feature_request.md
docs/archive/phase5-documentation-cicd-20250915/.github/workflows/: pr-validation.yml
docs/archive/phase5-documentation-cicd-20250915/docs/memory_bank/: phase2-progress.md
docs/archive/phase6-readme-enhancement-20250115/: ARCHIVE_MANIFEST.txt
docs/archive/phase8-health-monitoring-20250115/: README.md  implementation-summary.md  metrics-reference.md
docs/memory_bank/: active-context.md  documentation-maintenance-procedures.md  implementation-plan-documentation-overhaul.md  progress-summary.md  tasks.md  technical-context.md
docs/memory_bank/archive/: phase9-completion-summary.md
docs/memory_bank/archive/phase1-foundation-20250115/: progress.md
docs/memory_bank/archive/phase2-modularization-20250115/: ARCHIVE_MANIFEST.txt  architecture-design.md
docs/memory_bank/archive/phase3-enhancement-20250115/: ARCHIVE_MANIFEST.txt  phase3-progress.md
docs/memory_bank/archive/phase4-hardening-20250115/: ARCHIVE_MANIFEST.txt
docs/memory_bank/archive/phase5-documentation-cicd-20250915/: ARCHIVE_MANIFEST.txt  ARCHIVE_SUMMARY.md  pyproject.toml
docs/memory_bank/archive/phase5-documentation-cicd-20250915/.github/workflows/: release.yml
docs/memory_bank/archive/phase5-documentation-cicd-20250915/docs/: index.md
docs/memory_bank/archive/phase5-documentation-cicd-20250915/docs/memory_bank/: design-patterns.md  implementation-plan.md  phase4-progress.md  project-brief.md  tasks.md
docs/memory_bank/archive/phase7-docs-deployment-20250115/: ARCHIVE_MANIFEST.txt
docs/memory_bank/archive/phase8-health-monitoring-20250115/: architecture-health-monitoring.md  files-created.md  implementation-plan-health-monitoring.md
install/: streamreturn.desktop  xrandr.desktop
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/archive/: archive-TASK-001.md
memory-bank/creative/: creative-api-error-handling.md  creative-api-failure-handling-update.md  creative-api-failure-handling.md  creative-api-failure-images.md  creative-api-failure-summary.md  creative-architecture.md  creative-environment-setup.md
memory-bank/reflection/: reflection-TASK-001.md
scripts/: check-video-resolution.sh  config_migrate.py  fix-video-resolution.sh  install-service.sh  install.sh  setup_config.py  test_network_monitoring.py  test_prometheus_metrics.py  uninstall-service.sh  uninstall.sh  verify-metrics-installation.sh  vimeo-tui
services/: log_management.py  logrotation.conf  vimeo-monitor.service  vimeo_kiosk.service
src/vimeo_monitor/: __init__.py  config.py  health_module.py  logger.py  monitor.py  process_manager.py
src/vimeo_monitor/health/: __init__.py  metrics_collector.py  network_monitor.py  script_monitor.py  stream_monitor.py  system_monitor.py
tests/: __init__.py  conftest.py  test_config.py  test_documentation.py  test_health_module.py  test_logger.py  test_monitor.py  test_process_manager.py
tests/error_scenarios/: __init__.py  test_error_handling.py
tests/integration/: test_integration.py
vimeo_monitor/: __init__.py  __main__.py  alerting.py  circuit_breaker.py  cli.py  cli_tui.py  client.py  config.py  config_watcher.py  error_handler.py  errors.py  health.py  metrics.py  monitor.py  network_monitor.py  overlay.py  performance.py  recovery.py  simple_tui.py  stream.py  tui.py  validation.py
